--- a/public/index.html
+++ b/public/index.html
@@ -27,5 +27,7 @@
 
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
-    --></body>
+    -->
+    <script src="https://kit.fontawesome.com/0366dd7992.js" crossorigin="anonymous"></script>
+    </body>
 </html>
